<resources>
    <string name="stationName">Station name</string>
    <string name="no_realtime_available">No realtime available</string>
    <string name="more">More</string>
    <string name="pref_transfer_time">transfer_time</string>
    <string name="pref_cycling_speed">cycling_speed</string>
    <string name="pref_rolling_speed">rolling_speed</string>
    <string name="pref_walking_speed">walking_speed</string>
    <string name="pref_budget">budget</string>
    <string name="pref_time">time</string>
    <string name="pref_carbon">carbon</string>
    <string name="pref_hassle">hassle</string>
    <string name="pref_exercise">exercise</string>
    <string name="pref_map_type" translatable="false">settings_key_map_type_v2</string>
    <string name="pref_distance_unit" translatable="false">settings_key_distance_units</string>
    <string name="less">Less</string>
    <string name="realtime_early">%1$s early</string>
    <string name="realtime_late">%1$s late</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="no_results">No results</string>
    <string name="platform">Platform %s</string>
    <string name="share">Share</string>
    <string name="kickscooter">Kick Scooter</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan">Scan</string>
    <string name="open_in">Open in...</string>
    <string name="subscribed">Subscribed</string>
    <string name="accept">Accept</string>
    <string name="str_updating">Updating...</string>
    <string name="lbl_required">required</string>
    <string name="desc_close">Close</string>
    <string name="desc_close_button">Close Button</string>
    <string name="desc_change_button">Change Button</string>
    <string name="desc_done_button">Done Button</string>
    <string name="action_call_taxis">Call Taxis Combined</string>
    <string name="action_get_ingogo">Get ingogo</string>
    <string name="one_way_only">One-way only</string>
    <string name="str_minutes">minutes</string>
    <string name="pick_up_window">Pick up window</string>
    <string name="str_return_trip_voice_over">Select One-way only to decline a round trip, or select a date and time for your return trip.</string>
    <string name="str_select">Select</string>
    <string name="str_select_tickets">Select tickets</string>
    <string name="action_continue_to_payment">Continue to Payment</string>
    <string name="talkback_decrement">Decrease</string>
    <string name="talkback_increment">Increase</string>
    <string name="notes_from_operator">Notes from operator</string>
    <string name="lbl_alert_when_get_off">Trip Notifications</string>
    <string name="lbl_get_notifications_when">Get notifications when:</string>
    <string name="msg_prominent_disclosure">This app collects location data to enable trip alerts to notify you when your trip is starting, alert you about nearby stops during an ongoing trip, and inform you upon arriving at your destination, even when the app is closed or not in use. This ensures you receive timely updates and have a smoother travel experience. We prioritize your privacy and use this data solely for enhancing your travel with us.</string>
    <string name="lbl_go_to_current_location">Go to current location</string>
    <string name="get_off_alerts_trip_about_to_start">The trip is about to start</string>
    <string name="get_off_alerts_getting_within_disembarkation_point">Getting within 500m of the disembarkation point</string>
    <string name="get_off_alerts_passed_by_the_previous_stop">Passed by the previous stop</string>
    <string name="get_off_alerts_about_to_arrive_final_destination">About to arrive the final destination</string>
    <string name="get_off_alerts_vehicle_is_approaching_your_boarding_stop">Vehicle is approaching your boarding stop</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_notificaiton">Allow %s to send you notifications?</string>
    <string name="permission_request_notificaiton_open_settings_explanation">This permission is needed for you to receive notifications regarding your trips</string>
    <string name="location_prominent_disclosure_title">Allow location access</string>
    <string name="location_prominent_disclosure_body">This app uses your location to provide more relevant nearby results, improve search accuracy, and enhance your overall app experience. Your location is only used while using the app.</string>
    <string name="location_prominent_disclosure_not_now">Not now</string>
    <string name="location_prominent_disclosure_continue">Continue</string>
    <string name="location_provider_disabled">Location provider disabled</string>
    <string name="device_location_is_turned_off">Your device location is turned off, kindly enable it and try again</string>
    <string name="learn_more">Learn More</string>
    <string name="an_unexpected_network_error_has_occurred_dot_please_retry_dot">An unexpected network error has occurred. Please retry.</string>
    <string name="failed_to_resolve_location">Failed to resolve location</string>
    <string name="information_on_concession_pricing_is_subject_to_availability_dot">Information on concession pricing is subject to availability.</string>
    <string name="go_to_now">Go to Now</string>
    <string name="events_from_those_calendars_will_be_used_in_planning_your_day">Events from those calendars will be used in planning your day</string>
    <string name="_1_minute">1 minute</string>
    <string name="set_end_time">Set end time</string>
    <string name="select_calendars">Select calendars</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="set_start_time">Set start time</string>
    <string name="server">Server</string>
    <string name="version">Version</string>
    <string name="cycling_speed">Cycling speed</string>
    <string name="rolling_speed">Roll speed</string>
    <string name="unknown_location">Unknown location</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="include_in_trips">Include in trips</string>
    <string name="almost_full">Almost full</string>
    <string name="str_mins">mins</string>
    <string name="lbl_search_for_destination">Search for destination</string>
    <string name="lbl_pickup">Pickup</string>
    <string name="lbl_drop_off">Drop off</string>
    <string name="i_want_to_delete_my_account">I want to delete my account</string>
    <string name="lbl_manage">Manage</string>
    <string name="search">Search</string>
    <string name="save_time">Time</string>
    <string name="reduce_carbon">Environment</string>
    <string name="convenience">Convenience</string>
    <string name="exercise">Exercise</string>
    <string name="reset">Reset</string>
    <string name="save_money">Money</string>
    <string name="my_account">Your Account</string>
    <string name="weekdays">Weekdays</string>
    <string name="to__pattern">to %1$s</string>
    <string name="_perc_dot0f_minutes">%.0f minutes</string>
    <string name="_pattern_account">%1$s Account</string>
    <string name="_pattern_at__pattern">%1$s at %2$s</string>
    <string name="_pattern_every__pattern">%1$s every %2$s</string>
    <string name="about__pattern">About %1$s</string>
    <string name="arrive_by">Arrive by</string>
    <string name="auto">Auto</string>
    <string name="available_bikes">Available bikes</string>
    <string name="battery">Battery</string>
    <string name="calendars">Calendars</string>
    <string name="concession_pricing">Concession Pricing</string>
    <string name="data_provided_by__pattern">Data provided by %1$s</string>
    <string name="distances">Distance Units</string>
    <string name="empty_docks">Empty docks</string>
    <string name="end">End</string>
    <string name="error_encountered">Error encountered</string>
    <string name="expired">Expired</string>
    <string name="fast">Fast</string>
    <string name="favourite">Favorite</string>
    <string name="feedback__ampersand_support">Feedback &amp; Support</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="hybrid">Hybrid</string>
    <string name="km">Km</string>
    <string name="leave_at">Leave at</string>
    <string name="medium">Medium</string>
    <string name="mi">Mi</string>
    <string name="min_transfer_time">Min transfer time</string>
    <string name="minimise_results_for_this_mode_on_the_routes_screen_dot_great_for_transport_options_you_only_use_occasionally_dot">Minimise results for this mode on the routes screen. Great for transport options you only use occasionally.</string>
    <string name="more_information">More Information</string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_transport">My Transport</string>
    <string name="ok">OK</string>
    <string name="open_website">Open website</string>
    <string name="preferred_transport">Preferred transport</string>
    <string name="price">Price</string>
    <string name="priorities">Priorities</string>
    <string name="reminders">Reminders</string>
    <string name="remove_favourite">Remove</string>
    <string name="report_problem">Report \n Problem</string>
    <string name="request">Request</string>
    <string name="return_trip">Return trip</string>
    <string name="route">Route</string>
    <string name="satellite">Satellite</string>
    <string name="share_arrival">Share Arrival</string>
    <string name="show_trip">Show trip</string>
    <string name="skip">Skip</string>
    <string name="slow">Slow</string>
    <string name="start">Start</string>
    <string name="streets">Streets</string>
    <string name="tickets">Tickets</string>
    <string name="valid">Valid</string>
    <string name="walk_speed">Walk speed</string>
    <string name="week_starts">Week starts</string>
    <string name="wheelchair_information">Wheelchair information</string>
    <string name="where_do_you_want_to_go_question">Where do you want to go?</string>
    <string name="work">Work</string>
    <string name="gocatch_a_taxi">goCatch a Taxi</string>
    <string name="agenda">Agenda</string>
    <string name="app_usage_and_analytics">App usage and analytics</string>
    <string name="apply">Apply</string>
    <string name="calendars_on_your_agenda">Calendars on your Agenda</string>
    <string name="change_to_this_plan">Change to this plan</string>
    <string name="confirmation_is_required">Confirmation is required</string>
    <string name="current">Current</string>
    <string name="description">Description</string>
    <string name="device_data">Device data</string>
    <string name="edit_calendars">Edit calendars</string>
    <string name="edit_transport_modes">Edit transport modes</string>
    <string name="free">Free</string>
    <string name="full_fare">Full fare</string>
    <string name="get_updated_etas_while_you_apostre_on_a_trip_by_reporting_you_current_location_back_to_our_servers_dot_this_also_helps_improve_our_travel_time_prediction_dot_we_may_share_this_data_with_our_partners_who_help_us_make_those_predictions_dot">Get updated ETAs while you\'re on a trip by reporting your current location back to our servers. This also helps improve our travel time prediction.
We may share this data with our partners who help us make those predictions.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="label_tap_to_make_selections">Tap to make selections</string>
</resources>