<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    style="?android:buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/v4_btn_negative"
        style="@style/FlatDialogButtonStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/desc_cancel_button"
        tools:text="@string/cancel" />

    <Button
        android:id="@+id/v4_btn_positive"
        android:contentDescription="@string/desc_done_button"
        style="@style/FlatDialogButtonStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="@string/done" />
</LinearLayout>