<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/btnClose"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_close_button"
                android:gravity="center_vertical|end"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/close"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_app_button_primary"
            android:contentDescription="@string/desc_confirm_selection"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:theme="@style/Theme.MaterialComponents" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</layout>