<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/genericList_rv_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:accessibilityLiveRegion="polite"
            android:enabled="@{!viewModel.viewOnly}"
            android:gravity="top|start"
            android:text="@={viewModel.inputValue}"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genericList_cl_header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/genericList_cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/genericList_tv_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/accessibility_min_clickable_size"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingStart="@dimen/spacing_normal"
                android:text="@{viewModel.fragmentTitle}"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/genericList_b_close"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_close_button"
                android:gravity="center_vertical"
                android:minHeight="@dimen/accessibility_min_clickable_size"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingStart="@dimen/spacing_normal"
                android:text="@string/desc_close_button"
                android:textColor="@android:color/white"
                app:clickWithDebounce="@{() -> handler.onClose()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/genericList_b_done"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_done_button"
                android:gravity="center_vertical"
                android:minHeight="@dimen/accessibility_min_clickable_size"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingStart="@dimen/spacing_normal"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:visibility="@{!viewModel.viewOnly}"
                app:clickWithDebounce="@{() -> handler.onDone()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="handler"
            type="com.skedgo.tripkit.ui.dialog.GenericNoteDialogFragmentHandler" />

        <variable
            name="viewModel"
            type="com.skedgo.tripkit.ui.dialog.GenericNoteViewModel" />
    </data>

</layout>