<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.skedgo.tripkit.booking.quickbooking.QuickBookingType" />

        <variable
            name="viewModel"
            type="com.skedgo.tripkit.ui.trippreview.drt.DrtTicketViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        tools:targetApi="p">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemDrt_mainLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:screenReaderFocusable="true"
            android:padding="@dimen/spacing_small"
            app:layout_constraintEnd_toStartOf="@+id/itemDrt_actionLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/itemDrt_tvLabel"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/shadow_height"
                android:focusable="false"
                android:labelFor="@id/itemDrt_tvValue"
                android:text="@{viewModel.label}"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mobility Options" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/shadow_height"
                android:background="@drawable/bg_round_rect_red"
                android:focusable="false"
                android:gravity="center"
                android:paddingVertical="@dimen/spacing_extra_small"
                android:paddingHorizontal="@dimen/spacing_small"
                android:text="@string/lbl_required"
                android:textAlignment="center"
                android:textColor="@color/grey3"
                android:textSize="@dimen/font_size_small"
                android:visibility="@{viewModel.required &amp; !viewModel.viewMode}"
                app:layout_constraintBottom_toBottomOf="@+id/itemDrt_tvLabel"
                app:layout_constraintStart_toEndOf="@+id/itemDrt_tvLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemDrt_tvValue"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:focusable="false"
                android:text="@{viewModel.description}"
                android:textColor="@color/black1"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDrt_tvLabel"
                tools:text="@string/label_tap_to_make_selections" />

            <!--            android:visibility="@{viewModel.description.length() > 0}"-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemDrt_actionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/shadow_height"
            android:layout_marginBottom="@dimen/shadow_height"
            android:clickable="false"
            android:paddingStart="@dimen/spacing_small"
            android:paddingTop="@dimen/shadow_height"
            android:paddingEnd="@dimen/spacing_small"
            android:paddingBottom="@dimen/shadow_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/itemDrt_ibDecrement"
                    android:layout_width="@dimen/drt_ticket_action_icon_size"
                    android:layout_height="@dimen/drt_ticket_action_icon_size"
                    android:src="@drawable/ic_minus_small"
                    android:padding="@dimen/spacing_small"
                    android:background="@drawable/bg_round_rect_primary_dark"
                    android:visibility="@{!viewModel.viewMode &amp; viewModel.value > 0}"
                    android:contentDescription="@string/talkback_decrement"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/itemDrt_tvQuantity"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:paddingEnd="@dimen/spacing_small"
                    android:text="@{'x' + viewModel.value.toString()}"
                    android:textColor="@color/black"
                    android:contentDescription="@{viewModel.value.toString() + ` selected`}"
                    android:visibility="@{viewModel.value > 0}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/itemDrt_ibDecrement"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="x10"
                    tools:ignore="RtlSymmetry" />

                <ImageButton
                    android:id="@+id/itemDrt_ibIncrement"
                    android:layout_width="@dimen/drt_ticket_action_icon_size"
                    android:layout_height="@dimen/drt_ticket_action_icon_size"
                    android:src="@drawable/ic_add_small"
                    android:padding="@dimen/spacing_small"
                    android:background="@drawable/bg_round_rect_primary_dark"
                    android:contentDescription="@string/talkback_increment"
                    android:visibility="@{!viewModel.viewMode &amp; viewModel.value > 0}"
                    app:accessibilityViewFocus="@{viewModel.accessibilityFocusIncrementAction}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/itemDrt_tvQuantity"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/itemDrt_selectLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_rect_primary_dark"
                android:clickable="false"
                android:padding="@dimen/spacing_small"
                android:text="@string/str_select"
                android:textColor="@android:color/white"
                android:visibility="@{!viewModel.viewMode &amp; viewModel.value == 0}"
                app:accessibilityViewFocus="@{viewModel.accessibilityFocusSelectAction}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>